# vm1-video-mixer

./: .gitignore  .gitmodules  LICENSE  README.md
3d-print/prototype/: baseplate.stl
c/: ffmpeg_test.cpp  imgui_test.cpp  meson.build  sdl_test.cpp
c/shaders/: simple2D.frag
c/source/: GLHelper.cpp  PlaneRenderer.cpp  PlaneRenderer.h  Shader.cpp  Shader.h  VideoPlayer.cpp  VideoPlayer.h
c/subprojects/imgui/: meson.build  meson_options.txt
cpp/: ffmpeg_test.cpp  main.cpp  main_old.cpp  meson.build
cpp/shaders/: simple2D.frag  simple2D.vert  yuv2rgb_sand128.frag  yuv2rgb_sand128_TwoInputs.frag  yuv_mix.frag
cpp/source/: CameraRenderer.cpp  CameraRenderer.h  FileAssignmentWidget.cpp  FileAssignmentWidget.h  GLHelper.cpp  GLHelper.h  PlaneRenderer.cpp  PlaneRenderer.h  Shader.cpp  Shader.h  VideoPlane.cpp  VideoPlane.h  VideoPlayer.cpp  VideoPlayer.h
python/: vm1-test-fading.py
python/tests/: gstreamer-test.py  vm1-player.py  vm1-test.py
scripts/: set-hdmi-uyvy.sh
vm1/: config.php
vm1-controller/: README.md
vm1-controller/arduino/: README.md  VM1_Keyboard.elf  VM1_Keyboard.hex  VM1_Keyboard.uf2
vm1-controller/arduino/VM1_Keyboard/: .gitignore  MatrixKeypad.cpp  VM1_Keyboard.ino  compile.sh  rotatorio.h  upload.sh
vm1-controller/arduino/bin-obsolete/: VM1_Keyboard.ino.map  VM1_Keyboard.ino.uf2
vm1-controller/arduino/msgpck-receive-and-neopixels-test/: msgpck-receive-and-neopixels-test.ino  upload.sh
vm1-controller/arduino/obsolete/: VM1_Keyboard.yml
vm1-controller/firmware/20250224_PiPico-VSCodeExtension-Test/: .gitignore  CMakeLists.txt  main.c  usb_descriptors.c
vm1-controller/kicad/v02/: fp-info-cache  fp-lib-table  jlcpart-numbers.csv  pipico2040.kicad_sch  usb-c-and-power.kicad_sch  vm1-controller.kicad_pcb  vm1-controller.kicad_prl  vm1-controller.kicad_pro
vm1-controller/kicad/vm1-board-connector/: README.md  vm1-board-connector.kicad_prl  vm1-board-connector.kicad_pro
vm1-device/: README.md
vm1-device/arduino/VM1Device/: VM1Device.ino  compile.sh  install.sh  upload.sh
vm1-device/kicad/v01/: BOM.csv
vm1-device/kicad/v02/: .gitignore  fabrication-toolkit-options.json  sym-lib-table  vm1-controller.kicad_prl  vm1-controller.kicad_pro  vm1-controller.kicad_sch
vm1/cpp/: README.md  main.cpp  meson.build  vm1-valgrind.supp
vm1/cpp/shaders/: camera.frag  custom-template.frag  custom.frag  pass.comp  pass.vert  plane.frag  plane_with_effects.frag  screen.frag  simple2D.frag  video.frag  video.vert  webcam.frag  webcam_non_zero_copy.frag  yuv2rgb_sand128_and_camera.frag
vm1/cpp/shaders/custom/: andbins-first-truchet.frag  warping-procedural-2.frag
vm1/cpp/source/: AudioDevice.h  AudioSystem.cpp  AudioSystem.h  Buffer.h  CameraController.cpp  CameraController.h  CameraPlayer.cpp  CameraPlayer.h  CameraRenderer.cpp  CaptureType.h  DeviceController.cpp  DeviceController.h  DirectoryCache.cpp  DirectoryCache.h  EventBus.h  EventHandler.h  FileAssignmentWidget.cpp  FileAssignmentWidget.h  FontManager.h  GLHelper.cpp  GLHelper.h  ILI9341Controller.cpp  ILI9341Controller.h  ImageBuffer.h  KeyForwarder.h  KeyboardController.cpp  KeyboardController.h  KeyboardControllerLinux.cpp  KeyboardControllerLinux.h  KeyboardControllerSDL.cpp  KeyboardControllerSDL.h  KeyboardHotplug.h  MediaController.cpp  MediaController.h  MediaPlayer.cpp  MediaPlayer.h  MediaPool.cpp  MediaPool.h  MenuEntry.h  MenuSystem.cpp  (+47 more)
vm1/cpp/source/edid/: 1080p25edid.h  1080p30edid.h
vm1/cpp/source/fonts/: README.md  bdfont-data-gen  font-knxt.c  font-knxt.h  font-terminus_12n.c  font-terminus_12n.h  font-terminus_14n.c  font-terminus_14n.h  font-terminus_16b.c  font-terminus_16b.h  font-terminus_16n.c  font-terminus_16n.h  font-terminus_18n.c  font-terminus_18n.h  font-terminus_20n.c  font-terminus_20n.h  font-terminus_22n.c  font-terminus_22n.h  font-terminus_24b.c  font-terminus_24b.h  font-terminus_24n.c  font-terminus_24n.h  font-terminus_28b.c  font-terminus_28b.h  font-terminus_28n.c  font-terminus_28n.h  font-terminus_32n.c  font-terminus_32n.h  make-font.sh
vm1/cpp/source/ili9341/: DEV_Config.c  DEV_Config.h  ILI9341.c  ILI9341.h  README.md
vm1/cpp/source/menu/: MenuEntry.h  MenuSystem.cpp  MenuSystem.h
vm1/cpp/source/oled/: DEV_Config.c  DEV_Config.h  GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h  OLED_1in5_rgb.c  OLED_1in5_rgb.h
vm1/cpp/tests/: main_compute.cpp
vm1/cpp/tests/compute-shader/: main.cpp  meson.build
vm1/cpp/tests/compute-shader/shaders/: camera.frag  pass.comp  video.frag  video.vert
vm1/cpp/tests/compute-shader/source/: CameraController.cpp  CameraController.h  CameraPlayer.cpp  CameraPlayer.h  GLHelper.cpp  MediaController.h  MediaPlayer.cpp  MediaPlayer.h  Shader.cpp  Shader.h  V4L2Controller.cpp  VideoPlayer.cpp  VideoPlayer.h  meson.build
vm1/cpp/tests/compute-shader/source/edid/: 1080p30edid.h
vm1/cpp/tests/i2c-pico-to-pi/: main.cpp  meson.build
vm1/cpp/tests/serial-to-pico/: README.md  main.cpp  meson.build
vm1/cpp/tests/spi-to-pico/: main.cpp  meson.build
vm1/cpp/tests/stb-test/: Doxyfile  compile.sh  main.cpp  stb_app
vm1/cpp/tests/stb-test/include/: AppEventBus.h  AppEventHandler.h  Context.h  Gui.h  GuiItems.h  GuiRenderer.h  GuiStateBase.h  GuiStateMachine.h  GuiStates.h  KeyboardController.h  Settings.h  StbRenderer.h
vm1/cpp/tests/stb-test/include/GuiStates/: FileSelectionState.h  InfoState.h  IntroState.h  PlaybackState.h  SourceState.h  ValueState.h
vm1/cpp/tests/stb-test/include/stb/: stb_truetype.h
vm1/cpp/tests/stb-test/source/: AppEventHandler.cpp  Context.cpp  Gui.cpp  GuiItems.cpp  GuiRenderer.cpp  GuiStateMachine.cpp  KeyboardController.cpp  SoftwareRenderer.h  StbRenderer.cpp
vm1/deploy/: create-vm1-rpi-image.sh  install-rpi-image-gen.sh
vm1/deploy/vm1-basic/: 99-vm1.rules  autorun-vm1.sh  (+7 more)
vm1/python/: README.md  vm1-test-switching.py
vm1/res/: README.md  config.txt  localsend.service  vm1.service
vm1/scripts/: get-test-videos.sh  install-localsend.sh  set-hdmi-rgb.sh  set-hdmi-uyvy.sh
vm1/shaders/: 2d-clouds.frag  circle.frag  creation-by-silexars.frag  pretty-hip.frag
(+110 files in other folders)
